# mini-rag

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.prod.yml  compose.yml  pyproject.toml
.github/workflows/: deploy.yml
infrastructure/: compartment.tf  compute.tf  network.tf  outputs.tf  provider.tf  registry.tf  user_data.sh  variables.tf
src/: streamlit_app.py
src/app/: chunker.py  config.py  generator.py  indexer.py  loader.py  logger.py  retriever.py
src/scripts/: build_index.py
